--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -93,7 +93,7 @@ jobs:
               with:
                   node-version: 22
                   registry-url: https://registry.npmjs.org
-                  scope: club-cevan
+                  scope: Club-Cevan
 
             # Update the NPM CLI to the latest available version
             - name: Update NPM CLI
@@ -109,7 +109,7 @@ jobs:
             - name: Validate Attestation
               env:
                   GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-              run: gh attestation verify package.zip --repo club-cevan/cevan-utilities --signer-workflow club-cevan/cevan-utilities/.github/workflows/npm-publish.yml@refs/tags/${GITHUB_REF#refs/tags/}
+              run: gh attestation verify package.zip --repo Club-Cevan/cevan-utilities --signer-workflow Club-Cevan/cevan-utilities/.github/workflows/npm-publish.yml@refs/tags/${GITHUB_REF#refs/tags/}
 
             # Extract the zip file and remove the container
             - name: Unzip Artifact
