--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -118,4 +118,4 @@ jobs:
 
             # Publish the artifact to NPM with attestation
             - name: Upload Package to NPM Registry
-              run: npm publish
+              run: npm publish --access public
