--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -94,7 +94,7 @@ jobs:
               with:
                   node-version: 22
                   registry-url: https://registry.npmjs.org
-                  scope: '@club-cevan'
+                  scope: 'club-cevan'
 
             # Update the NPM CLI to the latest available version
             - name: Update NPM CLI
@@ -118,4 +118,4 @@ jobs:
 
             # Publish the artifact to NPM with attestation
             - name: Upload Package to NPM Registry
-              run: npm publish --access public
+              run: npm publish
